--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "chance": "^1.1.12",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
@@ -39,6 +40,7 @@
     "@eslint/js": "^9.9.1",
     "@types/bcryptjs": "^2.4.6",
     "@types/chance": "^1.1.6",
+    "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.8",
