--- a/backend/package.json
+++ b/backend/package.json
@@ -35,7 +35,8 @@
     "uuid": "^11.0.5",
     "vhost": "^3.0.2",
     "winston": "^3.17.0",
-    "winston-daily-rotate-file": "^5.0.0"
+    "winston-daily-rotate-file": "^5.0.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
